# PFA-BI-Ensias

./: .env.example  .gitignore  .gitmodules  AGENT_ROADMAP.md  DEMARRAGE.md  DEMARRAGE_AGENT.md  DEMARRAGE_SCRAPERS.md  QUICK_RUN.md  README.md  RECHERCHE_EN_LIGNE.md  app.py  config.py  pyproject.toml  realestate.py
AI-Agent/: .gitignore  README.md  agent.py  main.py  pyproject.toml  tools.py
agent/: README.md  legacy_crewai_agent.py
docs/: AGENT_IA.md  ARCHITECTURE.md  COLLECTE_DONNEES.md  DEMARRAGE.md  DEMARRAGE_SCRAPERS.md  INTERFACE_STREAMLIT.md  MACHINE_LEARNING.md  README.md  ROADMAP.md  SERVICES_IMMOBILIERS.md  TESTS.md
ml/: README.md  __init__.py  clean_data.py  predict.py  runner.py  train.py
real_estate/: __init__.py  services.py  web_search.py
scraping/: README.md  __init__.py  runner.py  schema.py  scrape_mubawab.py  scrape_sarouty.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: test_agent_tools.py  test_config.py  test_ml_runner.py  test_real_estate_services.py  test_scraper_runner.py  test_scraping_schema.py  test_streamlit_app.py  test_web_search.py
