[project]
name = "pfa-bi-ensias"
version = "0.1.0"
description = "Collecte et prediction des prix immobiliers au Maroc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "joblib>=1.4.2",
    "numpy>=2.0.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.5.0",
]

[tool.uv]
package = false
