[project]
name = "pfa-bi-ensias"
version = "0.1.0"
description = "Collecte et prediction des prix immobiliers au Maroc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "joblib>=1.4.2",
    "langchain-mistralai>=0.2.0",
    "numpy>=2.0.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.3",
    "scikit-learn>=1.5.0",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
